# calculator-mess

./: README.md  TODO.md  pyproject.toml
cm/: constants.py  main.py  schemas.py
cm/scenarios/: childe_mav_xilo_bennett_obsidian copy.py  childe_mav_xilo_bennett_obsidian.py  childe_mav_xilo_bennett_obsidian_r1.py  childe_mav_xilo_bennett_scroll.py  childe_mav_xilo_xl_gt.py  childe_mav_xilo_xl_obsidian.py  childe_mav_xilo_xl_scroll.py  childe_mav_xl_bennett.py  childe_xl_kaz_bennett.py  childe_xl_sucrose_bennett.py
cm/tests/: sample_data.py  test_calc.py  test_schemas.py
cm/utils/: buffs.py  enemy.py  formatting.py  general.py  reactions.py  validator.py
cm/utils/substat_calculator/: main.py
utils/er_calculator/: main.py
utils/substat_calculator/: README.md
