[tool.poetry]
name = "cm"
version = "1.1.0"
description = ""
authors = ["Ioannes <ioannesfifth@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
argparse = "^1.4.0"
jsonschema = "^4.23.0"
pytest = "^8.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
