[tool.poetry]
name = "cm"
version = "1.1.0"
description = ""
authors = ["Ioannes <ioannesfifth@gmail.com>"]
license = "GNU General Public License v3.0"
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.13"
argparse = "^1.4.0"
pytest = "^8.3.4"
mypy = "^1.14.1"
jsonschema = "^4.23.0"
types-jsonschema = "^4.23.0.20241208"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
